--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=dockerx;Username=postgres;Password=changeme"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
