--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,9 @@ services:
     container_name: inventory-manager-app
     ports:
       - 80:8080
+    depends_on:
+      db:
+        condition: service_started
 
 volumes:
   db-data:
