api serving database records

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,9 +5,13 @@ COPY . .
 RUN dotnet restore
 RUN dotnet publish -c Release -o /app/publish
 
+
 # Use the official .NET 8 ASP.NET Core runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/publish .
-ENTRYPOINT ["dotnet", "app.dll"]
+COPY efbundle .
+COPY appsettings.json .
+COPY run.sh .
+ENTRYPOINT ["./run.sh"]
 EXPOSE 8080
