--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=dockerx;Username=postgres;Password=changeme"
+    "DefaultConnection": "Host=inventory-manager-db;Port=5432;Database=InventoryManager;Username=postgres;Password=changeme"
   },
   "Logging": {
     "LogLevel": {
