Update/web api (#5)
* db and app communicating

* api serving database records

* remove obsolete script

* remove obsolete scripts

--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=inventory-manager-db;Port=5432;Database=InventoryManager;Username=postgres;Password=changeme"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
