--- a/compose.yaml
+++ b/compose.yaml
@@ -3,9 +3,14 @@ services:
     image: inventory-manager-db
     container_name: inventory-manager-db
     environment:
+      POSTGRES_DB: InventoryManager
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: changeme
+      POSTGRES_INITDB_ARGS: -A md5
     ports:
       - 5432:5432
+    healthcheck:
+      test: "pg_isready -q -U postgres"
     volumes:
       - db-data:/var/lib/postgresql/data
   app:
@@ -13,6 +18,9 @@ services:
     container_name: inventory-manager-app
     ports:
       - 80:8080
+    depends_on:
+      db:
+        condition: service_healthy
 
 volumes:
   db-data:
